Connected login form to server. Added sample home activity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".Home">
+        </activity>
         <activity android:name=".Register">
         </activity>
         <activity android:name=".MainActivity">
@@ -25,13 +27,13 @@
 
         <meta-data
                 android:name="com.parse.SERVER_URL"
-                android:value="@string/back4app_server_url" />
+                android:value="@string/back4app_server_url"/>
         <meta-data
                 android:name="com.parse.APPLICATION_ID"
-                android:value="@string/back4app_app_id" />
+                android:value="@string/back4app_app_id"/>
         <meta-data
                 android:name="com.parse.CLIENT_KEY"
-                android:value="@string/back4app_client_key" />
+                android:value="@string/back4app_client_key"/>
     </application>
 
 </manifest>
