--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.example.alarm">
-
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
             android:name=".App"
@@ -17,6 +18,9 @@
         </activity>
         <activity android:name=".Register">
         </activity>
+        <activity android:name=".Alarm">
+        </activity>
+        <receiver android:name=".AlarmReceiver"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -34,6 +38,9 @@
         <meta-data
                 android:name="com.parse.CLIENT_KEY"
                 android:value="@string/back4app_client_key"/>
+        <meta-data
+                android:name="com.google.android.gms.ads.AD_MANAGER_APP"
+                android:value="true" />
     </application>
 
 </manifest>
