--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,14 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+            android:theme="@style/Theme.AppCompat">
         <activity android:name=".Home">
         </activity>
         <activity android:name=".Register">
         </activity>
-        <activity android:name=".Alarm">
-        </activity>
+        <activity android:name=".ChangeAlarm"
+                  android:noHistory="true"
+        />
         <receiver android:name=".AlarmReceiver"/>
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -44,7 +45,9 @@
         <meta-data
                 android:name="com.parse.CLIENT_KEY"
                 android:value="@string/back4app_client_key"/>
-
+        <meta-data
+                android:name="com.google.android.gms.ads.AD_MANAGER_APP"
+                android:value="true" />
         <service
                 android:name="com.parse.fcm.ParseFirebaseInstanceIdService"
                 android:exported="true">
