--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
           package="com.example.alarm">
     <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.VIBRATE" />
@@ -20,6 +22,8 @@
             android:theme="@style/Theme.AppCompat">
         <activity android:name=".Home">
         </activity>
+        <activity android:name=".PopupActivity" android:launchMode="singleInstance"
+        ></activity>
         <activity android:name=".Register">
         </activity>
         <activity android:name=".PickLocation">
@@ -62,6 +66,7 @@
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
+
 
         <service
                 android:name="com.parse.fcm.ParseFirebaseMessagingService">
